# pacana

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  README.md.in  RELEASE.md  THANKS  TODO  _config.yml  configure.ac  configure.sh  index.md
man/: Makefile.am  pacana.pod
src/: Makefile.am  pacana.c
